--- a/frontend/parallel/package.json
+++ b/frontend/parallel/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "~36.0.0",
+    "expo-location": "~8.0.0",
     "jquery": "^3.4.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
