--- a/frontend/parallel/package.json
+++ b/frontend/parallel/package.json
@@ -15,8 +15,12 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-google-maps-directions": "^2.1.1",
     "react-native-maps": "0.26.1",
-    "react-native-web": "~0.11.7"
+    "react-native-modals": "^0.19.9",
+    "react-native-popup-dialog": "^0.18.3",
+    "react-native-web": "~0.11.7",
+    "rn-bottom-drawer": "^1.4.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0"
